@@ -2,7 +2,7 @@
 corenlp.classes=/home/houghton/jars/stanford-corenlp-2011-06-19/stanford-corenlp-2011-06-19.jar
 corenlp.models=/home/houghton/jars/stanford-corenlp-2011-06-19/stanford-corenlp-models-2011-06-19.jar
 corenlp.nu.xom=/home/houghton/jars/stanford-corenlp-2011-06-19/xom.jar
-grammar.jar=/home/houghton/git_projects/Grammar/build/jar/Grammar-2.02.jar
+grammar.jar=/home/houghton/git_projects/Grammar/build/jar/Grammar-2.03.jar
 
 # if you're on a Debian Linux machine, this may well work
 junit=/usr/share/java/junit4.jar
